--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <h1>RUN BUDDY</h1>
 
-        What We Do What You Do Your Trainers Reach OUt
+        What We Do What You Do Your Trainers Reach Out
 
     </body>
 </html>
