Created navigation, ol, li, and anchor inside header

--- a/index.html
+++ b/index.html
@@ -15,7 +15,33 @@
         <!-- navigation -->
         <header>
 
-        <h1>RUN BUDDY</h1>
+        <h1>
+            <!--anchor run buddy to / aka path topmost directory-->
+            <a href="/">RUN BUDDY</a>
+        </h1>
+        
+        <nav>
+            <!--uordered list element -->
+            <ul>
+                <!--list item element -->
+                <li>
+                    <!--anchor element -->
+                    <a href="#what-we-do">What We Do</a>
+                </li>
+                <li>
+                    <!--anchor element -->
+                    <a href="#what-you-do">What You Do</a>
+                </li>
+                <li>
+                    <!--anchor element -->
+                    <a href="#your-trainers">Your Trainers</a>
+                </li>
+                <li>
+                    <!--anchor element -->
+                    <a href="#reach-out">Reach Out</a>
+                </li>
+            </ul>
+        </nav>
 
         </header>
 
@@ -30,7 +56,7 @@
         <section>
             <h2>What We Do</h2>
         </section>
-        
+
         <!--"what you do" section-->
 
         <section>
