--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
         <title>Run Buddy</title>
 
+        <!--add link to css file-->
+        <link rel="stylesheet" href="./assets/style.css"/>
+
     </head>
 
     <body>
@@ -19,7 +22,7 @@
             <!--anchor run buddy to / aka path topmost directory-->
             <a href="/">RUN BUDDY</a>
         </h1>
-        
+
         <nav>
             <!--uordered list element -->
             <ul>
