--- a/run-buddy/index.html
+++ b/run-buddy/index.html
@@ -92,7 +92,7 @@
 
         <!-- "What we do" section -->
 
-        <section id="what-we-do">
+        <section id="what-we-do" class="intro">
             <h2>What We Do</h2>
 
             <p>
