--- a/run-buddy/index.html
+++ b/run-buddy/index.html
@@ -132,8 +132,45 @@
 
         <!--"meet the trainers" section-->
 
-        <section>
-            <h2>Meet The Trainers</h2>
+        <section id="your-trainers" class="trainers">
+            <h2 class="section-title primary-border">Meet The Trainers</h2>
+
+            <article class="trainer">
+                <img src="./assets/images/trainer-1.jpg" alt="Arron Sstephens in his workout clothes, ready to pump iron" />
+
+                <div class="trainer-bio text-left">
+                    <h3>Arron Stephens</h3>
+                    <h4>Speed / Strength</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem aperiam minima eos quidem! Quibusdam obcaecati vel cupiditate, 
+                        aliquid delectus aliquam in at culpa dignissimos quas reprehenderit architecto, odio, sequi tempore?
+                    </p>
+                </div>
+            </article>
+            <article class="trainer">
+
+                <div class="trainer-bio text-right">
+                    <h3>Joanna Gill</h3>
+                    <h4>Endurance</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem aperiam minima eos quidem! Quibusdam obcaecati vel cupiditate, 
+                        aliquid delectus aliquam in at culpa dignissimos quas reprehenderit architecto, odio, sequi tempore?
+                    </p>
+                </div>
+                <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+            </article>
+            <article class="trainer">
+                <img src="./assets/images/trainer-3.jpg" alt="Harry smith wearing a headband and lifting comically small pink weights" />
+
+                <div class="trainer-bio text-left">
+                    <h3>Harry "The Headband" Smith</h3>
+                    <h4>Strength</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem aperiam minima eos quidem! Quibusdam obcaecati vel cupiditate, 
+                        aliquid delectus aliquam in at culpa dignissimos quas reprehenderit architecto, odio, sequi tempore?
+                    </p>
+                </div>
+            </article>
         </section>
 
         <!--"reach out" section-->
