--- a/run-buddy/index.html
+++ b/run-buddy/index.html
@@ -175,18 +175,14 @@
 
         <!--"reach out" section-->
 
-        <section>
-            <h2>Reach Out</h2>
+        <section id="reach-out" class="contact">
+            <h2 class="section-title secondary-border">Reach Out</h2>
             <div class="contact-info">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3469.708234774535!2d-98.62185368561934!3d29.583091382052498!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x865c667dd6657fdd%3A0x24e55c903c3a270c!2sThe%20University%20of%20Texas%20at%20San%20Antonio!5e0!3m2!1sen!2sus!4v1657862223089!5m2!1sen!2sus" 
-                width="400" 
-                height="400" 
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3469.708234774535!2d-98.62185368561934!3d29.583091382052498!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x865c667dd6657fdd%3A0x24e55c903c3a270c!2sThe%20University%20of%20Texas%20at%20San%20Antonio!5e0!3m2!1sen!2sus!4v1657862223089!5m2!1sen!2sus"  
                 style="border:0;" 
                 allowfullscreen="" 
-                loading="lazy"
-                 referrerpolicy="no-referrer-when-downgrade">
+                loading="lazy">
                 </iframe>
-            </div>
             <div>
                 <h3>Run Buddy</h3>
                 <p>
@@ -201,6 +197,7 @@
                     P: 555.RUN.BUDZ (555.786.2839)<br/>
                     E: <a href="mailto:info@runbuddy.io">Info@runbuddy.io</a>
                 </address>
+            </div>
             </div>
         </section>
 
