--- a/run-buddy/index.html
+++ b/run-buddy/index.html
@@ -99,18 +99,22 @@
         <!-- "What we do" section -->
 
         <section id="what-we-do" class="intro">
+            <div class="flex-row">
             <h2 class="section-title primary-border">What We Do</h2>
-
+            </div>
+            <div class="flex-row">
             <p>
                 butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
             </p>
+            </div>
         </section>
 
         <!--"what you do" section-->
 
         <section id="what-you-do" class="steps">
+            <div class="flex-row">
             <h2 class="section-title secondary-border">What You Do</h2>
-
+            </div>
             <div>
                 <img src="./assets/images/step-1.svg" alt="" />
                 <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
@@ -139,8 +143,9 @@
         <!--"meet the trainers" section-->
 
         <section id="your-trainers" class="trainers">
+            <div class="flex-row">
             <h2 class="section-title primary-border">Meet The Trainers</h2>
-
+            </div>
             <article class="trainer">
                 <img src="./assets/images/trainer-1.jpg" alt="Arron Sstephens in his workout clothes, ready to pump iron" />
 
@@ -182,7 +187,9 @@
         <!--"reach out" section-->
 
         <section id="reach-out" class="contact">
+            <div class="flex-row">
             <h2 class="section-title secondary-border">Reach Out</h2>
+            </div>
             <div class="contact-info">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3469.708234774535!2d-98.62185368561934!3d29.583091382052498!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x865c667dd6657fdd%3A0x24e55c903c3a270c!2sThe%20University%20of%20Texas%20at%20San%20Antonio!5e0!3m2!1sen!2sus!4v1657862223089!5m2!1sen!2sus"  
                 style="border:0;" 
